[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.10.1"
pinocchio-associated-token-account = "0.3.0"
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-program = "1.16.0"
solana-address = {version="2.0.0", features = ["curve25519"]}


[lib]
crate-type = ["lib", "cdylib"]
