[package]
name = "my_solana_program"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.10.1"
pinocchio-system = "0.5.0"
solana-address = {version="2.0.0", features = ["curve25519"]}
solana-program = "1.18"  # 请根据当前 Solana 版本调整
solana-program-log = "1.1.0"

[lib]
crate-type = ["lib", "cdylib"]
