[package]
name = "blueshift_anchor_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blueshift_anchor_vault"

[features]
default = []
# 注意：这里没有 cpi = ["anchor-lang/cpi"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
anchor-spl = { version = "0.30", features = ["token"] }